--- a/gateway/src/views/history.hbs
+++ b/gateway/src/views/history.hbs
@@ -24,7 +24,7 @@
                     <a href="/upload">Upload</a>
                 </div>
                 <div class="ml-4 border-b-2 border-blue-600">
-                    <a href="/history">History</a>
+                    {{!-- <a href="/history">History</a> --}}
                 </div>
             </div>
         </div>
