--- a/gateway/src/views/upload-video.hbs
+++ b/gateway/src/views/upload-video.hbs
@@ -26,7 +26,7 @@
                     <a href="/upload">Upload</a>
                 </div>
                 <div class="ml-4">
-                    <a href="/history">History</a>
+                    {{!-- <a href="/history">History</a> --}}
                 </div>
             </div>
         </div>
