--- a/gateway/src/views/video-list.hbs
+++ b/gateway/src/views/video-list.hbs
@@ -24,7 +24,7 @@
                     <a href="/upload">Upload</a>
                 </div>
                 <div class="ml-4">
-                    <a href="/history">History</a>
+                    {{!-- <a href="/history">History</a> --}}
                 </div>
             </div>
         </div>
