--- a/gateway-kor/src/views/upload-video.hbs
+++ b/gateway-kor/src/views/upload-video.hbs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>SeoTube: Upload video</title>
+    <title>SeoTube: 비디오 업로드</title>
 
     <link rel="stylesheet" href="css/tailwind.min.css">
     <link rel="stylesheet" href="css/app.css">
@@ -20,28 +20,28 @@
                     SeoTube
                 </div>
                 <div class="ml-16">
-                    <a href="/">Videos</a>
+                    <a href="/">영상</a>
                 </div>
                 <div class="ml-4 border-b-2 border-blue-600">
-                    <a href="/upload">Upload</a>
+                    <a href="/upload">업로드</a>
                 </div>
                 <div class="ml-4">
-                    <a href="/history">History</a>
+                    <a href="/history">시청 기록</a>
                 </div>
             </div>
         </div>
 
         <div class="m-4">
-            <h1>Upload videos</h1>
+            <h1>영상 업로드</h1>
             <div class="m-4">
                 <form class="upload-form">
-                    <p>Click the button and choose videos to upload.</p>
+                    <p>업로드 하려면 아래 버튼을 눌러주세요</p>
                     <input class="mt-2" type="file" id="uploadInput" accept="video/*"
                         onchange="uploadFiles(this.files)" />
                 </form>
 
                 <div id="results" class="mt-4">
-                    <div>Uploaded:</div>
+                    <div>업로드 완료 시 파일 명 표시: </div>
                 </div>
             </div>
         </div>
