--- a/gateway-kor/src/views/history.hbs
+++ b/gateway-kor/src/views/history.hbs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>SeoTube: History</title>
+    <title>SeoTube: 시청 기록</title>
 
     <link rel="stylesheet" href="css/tailwind.min.css">
     <link rel="stylesheet" href="css/app.css">
@@ -13,29 +13,31 @@
 <body>
     <div class="flex flex-col">
         <div class="border-b-2 bg-gray-100">
-            <div class="nav flex flex-row items-center mt-1 p-2">
-                <div class="text-xl font-bold">
-                    SeoTube
-                </div>
-                <div class="ml-16">
-                    <a href="/">Videos</a>
-                </div>
-                <div class="ml-4">
-                    <a href="/upload">Upload</a>
-                </div>
-                <div class="ml-4 border-b-2 border-blue-600">
-                    <a href="/history">History</a>
+            <div class="border-b-2 bg-gray-100">
+                <div class="nav flex flex-row items-center mt-1 p-2">
+                    <div class="text-xl font-bold">
+                        SeoTube
+                    </div>
+                    <div class="ml-16">
+                        <a href="/">영상</a>
+                    </div>
+                    <div class="ml-4 border-b-2 border-blue-600">
+                        <a href="/upload">업로드</a>
+                    </div>
+                    <div class="ml-4">
+                        <a href="/history">시청 기록</a>
+                    </div>
                 </div>
             </div>
         </div>
 
         <div class="m-4">
-            <h1>Viewing history</h1>
+            <h1>시청 기록</h1>
             <div class="m-4">
                 <table>
                     <tr>
                         <th class="border-2 p-1 pl-2 pr-2">Video id</th>
-                        <th class="border-2 p-1 pl-2 pr-2">Date watched</th>
+                        <th class="border-2 p-1 pl-2 pr-2">시청 시간</th>
                     </tr>
                     {{#each videos}}
                     <tr class="mt-1">
