한국 버전에도 홈 버튼 추가

--- a/gateway-kor/src/views/history.hbs
+++ b/gateway-kor/src/views/history.hbs
@@ -16,7 +16,7 @@
             <div class="border-b-2 bg-gray-100">
                 <div class="nav flex flex-row items-center mt-1 p-2">
                     <div class="text-xl font-bold">
-                        SeoTube
+                        <a href="/">SeoTube</a>
                     </div>
                     <div class="ml-16">
                         <a href="/">영상</a>
