파이프라인 수정

--- a/gateway-kor/src/views/video-list.hbs
+++ b/gateway-kor/src/views/video-list.hbs
@@ -39,7 +39,7 @@
                 </div>
                 {{/each}}
                 {{else}}
-                아직 영상이 없습니다.
+                아직 표시할 영상이 없습니다.
                 {{/if}}
             </div>
         </div>
