--- a/gateway-kor/src/views/play-video.hbs
+++ b/gateway-kor/src/views/play-video.hbs
@@ -31,7 +31,7 @@
     </div>
 
     <div class="m-4">
-        <h1>재생 {{video.metadata.name}}</h1>
+        <h1>{{video.metadata.name}}</h1>
         <div class="m-4">
             <video controls autoplay muted>
                 <source src={{video.url}} type="video/mp4">
