지속적 통합 종료

--- a/gateway-kor/src/views/history.hbs
+++ b/gateway-kor/src/views/history.hbs
@@ -42,7 +42,7 @@
                     {{#each videos}}
                     <tr class="mt-1">
                         <td class="border-2 p-1 pl-2 pr-2">
-                            <a href="/video?id={{this.videoId}}">{{this.videoId}}</a>
+                            {{this.videoId}}
                         </td>
                         <td class="border-2 p-1 pl-2 pr-2">
                             {{this.watched}}
